lines moved to own section and all lines layout issues fixed

--- a/app/_component/_themeAble/_frame/_pageSection/workSection/workSection.css
+++ b/app/_component/_themeAble/_frame/_pageSection/workSection/workSection.css
@@ -6,7 +6,7 @@
 }
 
 component-body {
-  z-index: 1;
+  z-index: 2;
 }
 
 
@@ -76,7 +76,7 @@ service-showcase h1.chonker::before {
   width: 3px;
   height: 50%;
   top: 50%; 
-  left: -19px;
+  left: -18px;
 }
 
 h2.lil {
@@ -94,7 +94,7 @@ h2.lil::before {
   position: absolute;
   width: 3px;
   height: 27px;
-  left: -19px;
+  left: -18px;
 }
 
 h2.lil::selection {
@@ -104,7 +104,7 @@ h2.lil::selection {
 
 h2.count {
   color: rgb(var(--theme));
-  font-size: 19px;
+  font-size: 18px;
   margin-top: 3px;
   margin-bottom: 4px;
 }
@@ -122,7 +122,7 @@ h2.count::before {
   position: absolute;
   width: 26px;
   height: 26px;
-  left: -19px;
+  left: -18px;
   top: 3px;
   border-radius: 50%;
   transform: translateX(-50%);
@@ -137,7 +137,7 @@ h2.count::after {
   position: absolute;
   width: 26px;
   height: 26px;
-  left: -19px;
+  left: -18px;
   top: 3px;
   transform: translateX(-50%) translateY(-1px);
 }
